--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "randomnizer-for-winners",
   "version": "1.0.0",
   "description": "random names made just for winners",
-  "main": "NameGenerator.js",
   "scripts": {
-    "test": "jest"
+    "test": "stryker run"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^24.5.0"
+    "@stryker-mutator/core": "^1.2.0",
+    "jest": "^24.7.1"
   }
 }
